# rust-api-boilerplate

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Rocket.toml
migrations/2020-03-20-095547_create_users/: up.sql
migrations/2020-03-26-095025_rbac/: down.sql  up.sql
src/: fairing.rs  lib.rs  main.rs
src/api/: auth.rs  error.rs  jwt.rs  mod.rs  nt.rs
src/api/rbac/: access.rs  action.rs  domain.rs  mod.rs  rbac.rs  role.rs  user.rs
src/api/upload/: mod.rs  multipart.rs  simple.rs  thumbnail.rs  upload.rs
src/dao/: mod.rs  model.rs  schema.rs
src/dao/model/: mod.rs  user.rs
src/dao/model/rbac/: action.rs  domain.rs  mod.rs  role.rs
