[package]
name = "aid"
version = "0.1.0"
authors = ["alichen <ali322@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.3"
dotenv = "0.9.0"
diesel = { version = "1.0.0", features = ["postgres", "chrono", "uuidv07"]}
openssl = "*"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
validator = "0.10"
validator_derive = "0.10"
jsonwebtoken = "5"
bcrypt = "0.6.2"
uuid = { version = ">=0.7.0, <0.9.0", features = ["serde", "v4"] }
multipart = "0.16.1"
base64 = "0.12.0"
image="0.23.3"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rocket_cors = { version = "0.5.1", default-features = false }
thiserror = "1.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["diesel_postgres_pool", "json"]

[dependencies.chrono]
version = "0.4.11"
features = ["serde"]